--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="title">To Do List</div>
     <div class="add_block tasks_text">
         <form name="addTask">
-            <input type="text" name="newItem"/>
+            <input type="text" name="newItem" placeholder="What to do?"/>
         </form>
         <div id="addButton">Add</div>
     </div>
