--- a/index.html
+++ b/index.html
@@ -4,23 +4,30 @@
     <meta charset="UTF-8">
     <title>To Do List</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="scripts/jquery-3.2.0.min.js"></script>
+    <script src="scripts/engine.js"></script>
 </head>
 <body>
 <div class="body_wrap">
+
     <div class="title">To Do List</div>
-    <div class="add_block tasks_text">
-        <form name="addTask">
-            <input type="text" name="newItem" placeholder="What to do?"/>
+
+    <!--- block with add form -->
+    <div class="adding_block items_text">
+        <form name="addItem">
+            <input type="text" id="newItem" placeholder="What to do?"/>
         </form>
         <div id="addButton">Add</div>
     </div>
-    <div class="tasks_block">
 
+    <!--- block with items -->
+    <div id="items_wrap" class="items_text">
 
 
 
 
     </div>
+    <input type="checkbox" id="markAll"/>
 </div>
 </body>
 </html>
