--- a/index.html
+++ b/index.html
@@ -5,29 +5,42 @@
     <title>To Do List</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="scripts/jquery-3.2.0.min.js"></script>
-    <script src="scripts/engine.js"></script>
+    <script src="scripts/engineLS.js"></script>
 </head>
 <body>
 <div class="body_wrap">
-
     <div class="title">To Do List</div>
-
     <!--- top block with add form -->
     <div class="menu_block menu_text">
         <input type="text" id="newItem" placeholder="What to do?"/>
         <div id="addButton">Add</div>
     </div>
 
-    <!--- block with items -->
+    <!--- HERE GOES ALL OF THE CREATED ITEMS -->
     <div id="items_wrap">
+
+
+
+
+
+
+
+
+
+
 
     </div>
 
     <!--- bottom block with controls -->
     <div class="menu_block menu_text">
+
         <input type="checkbox" id="markAll"/><div style="align-self: center;">Complete all</div>
+
         <div id="clearButton">Clear completed</div>
+
     </div>
+
+    <div class="copyright">by Peter Dyumin, 2017</div>
 </div>
 </body>
 </html>
