--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <title>To Do List</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="scripts/jquery-3.2.0.min.js"></script>
-    <script src="scripts/engineLS.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
+    <script src="scripts/engine.js"></script>
 </head>
 <body>
 <div class="body_wrap">
     <div class="title">To Do List</div>
     <!--- top block with add form -->
     <div class="menu_block menu_text">
-        <input type="text" id="newItem" placeholder="What to do?"/>
+        <input type="text" id="text" placeholder="What to do?"/>
         <div id="addButton">Add</div>
     </div>
 
@@ -34,12 +34,14 @@
     <!--- bottom block with controls -->
     <div class="menu_block menu_text">
 
-        <input type="checkbox" id="markAll"/><div style="align-self: center;">Complete all</div>
+        <div id="markAll"></div><div style="align-self: center;">Complete all</div>
 
         <div id="clearButton">Clear completed</div>
 
-    </div>
+        <div id="pending" class="stats"></div>
+        <div id="done" class="stats"></div>
 
+    </div>
     <div class="copyright">by Peter Dyumin, 2017</div>
 </div>
 </body>
