--- a/test1.html
+++ b/test1.html
@@ -3,16 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>test1</title>
+
     <link rel="stylesheet" href="css/test1.css">
-    <script src="scripts/jquery-3.2.0.min.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
     <script src="scripts/test1.js"></script>
 </head>
 <body>
-<h1>TO DO</h1>
-<input type='text' id='name' placeholder='New Task'>
-<a href='#' id='add-btn'>Add Task</a>
-<ul id='list'>
-</ul>
+<input type='text' id="text" placeholder='Text'>
+
+<div id='addButton'>Add to array</div>
+
+<div id='itemList'>
+
+
+
+
+
+</div>
+
+<div id='pending'></div>
+<div id='done'></div>
+
+<div id="clearButton">Clear array</div>
 
 </body>
 </html>
