March 30 update FINAL

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div id="bottom_showAll" class="bottom_radio checked"></div><div id="bottom_showAll_text" class="bottom_radio_text">Show all</div>
             <div id="bottom_showPending" class="bottom_radio"></div><div id="bottom_showPending_text" class="bottom_radio_text">Show pending</div>
             <div id="bottom_showDone" class="bottom_radio"></div><div id="bottom_showDone_text" class="bottom_radio_text">Show completed</div>
-            <!-- <input type="checkbox" id="c1" name="cc" /><label for="c1"><span>Check Box 1</span></label> -->
+            <!-- <input type="checkbox" id="c1" name="cc" /><label for="c1"><span>Check Box 1</span></label> --->
         </div>
 
         <div class="menu_block__bottom_right">
